[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes_Scripts/Room.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes_Scripts/Monster.gd" type="Script" id=2]
[ext_resource path="res://KarmaFuture.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Art/Health_under.png" type="Texture" id=4]
[ext_resource path="res://Art/Health_over.png" type="Texture" id=5]
[ext_resource path="res://Art/Health_progress.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[node name="Monster" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="HitNoise" type="AudioStreamPlayer2D" parent="." index="3"]

[node name="DeathNoise" type="AudioStreamPlayer2D" parent="." index="4"]

[node name="DamageTaken" type="Label" parent="." index="5"]
margin_left = -53.0
margin_top = -137.0
margin_right = 38.0
margin_bottom = -96.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="HealthBar" type="TextureProgress" parent="." index="6"]
margin_left = -88.0
margin_top = -171.0
margin_right = 111.0
margin_bottom = -137.0
value = 100.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="HealthValueLabel" type="Label" parent="." index="7"]
margin_left = 91.0
margin_top = -162.0
margin_right = 156.0
margin_bottom = -135.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="DropInfoLabel" type="Label" parent="." index="8"]
margin_left = -189.0
margin_top = 184.0
margin_right = 214.0
margin_bottom = 232.0
custom_fonts/font = SubResource( 2 )
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="AttackInfoLabel" type="Label" parent="." index="9"]
margin_left = -498.0
margin_top = -14.0
margin_right = -269.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 2 )
align = 1
